--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -188,7 +188,7 @@ schemars_1 = { package = "schemars", version = "1.0.2" }
 serde = { version = "1.0.152", default-features = false, features = ["derive"] }
 serde_json = { version = "1.0.25", features = ["preserve_order"] }
 serde_test = "1.0.124"
-serde_yaml = "0.9.2"
+yaml_serde = "0.10.3"
 serde-xml-rs = "0.8.1"
 
 [[test]]
